<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/case_blanche">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/case_noire"
        android:padding="10dp"
        android:background="@drawable/rounded_corners_background">

        <TextView
            android:id="@+id/title"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:background="@drawable/rounded_corners_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/edit_text_plr1_title"
            android:textColor="@color/black"
            android:text="@string/edit_text_plr1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:layout_marginTop="20dp">
        </TextView>

        <EditText
            android:id="@+id/plr1_name_menu"
            android:layout_width="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_corners_background"
            android:backgroundTint="@color/white"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:hint="@string/plrname_placeholder"
            android:autofillHints="name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/edit_text_plr1_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </EditText>

        <TextView
            android:id="@+id/edit_text_plr2_title"
            android:text="@string/edit_text_plr2_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/plr1_name_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>

        <EditText
            android:id="@+id/plr2_name_menu"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_corners_background"
            android:backgroundTint="@color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/plrname_placeholder"
            android:autofillHints="name"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/edit_text_plr2_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </EditText>

        <Button
            android:id="@+id/start"
            android:background="@drawable/rounded_corners_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button_text"
            app:layout_constraintTop_toBottomOf="@id/plr2_name_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:enabled="false">
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>